# ComplianceOracle

./: --timeout  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_DESIGN_DRAFT.md  README.md  pyproject.toml  test.log.out
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-doc-surface.txt  task-11-coverage-guardrails.txt  task-12-roadmap-backlog.md  task-13-enhancement-epics.md  task-14-final-audit.md  task-2-contract-baseline.txt  task-3-gap-register.txt  task-4-purpose-alignment.txt  task-5-readme-tools.txt  task-6-design-draft-status.txt  task-7-governance-pack.txt  task-8-test-matrix.txt  task-9-ci-baseline.txt  task-F-closeout-summary.txt  task-F1-plan-compliance-audit.txt  task-F2-code-quality-review.txt  task-F3-real-manual-qa.txt  task-F4-scope-fidelity-check.txt  task-T1-contract-serialize.txt  task-T1-contract-validate-error.txt  task-T1-sanitize-happy.txt  task-T11-hybrid-parity-outage-policy.txt  task-T2-baseline-map.md  task-T2-config-defaults.txt  task-T2-config-invalid-mode.txt  task-T3-full-gate.txt  (+20 more)
data/: .gitkeep
docs/: HYBRID_OPERATIONS.md  LATEX_REPORTING_SPEC.md  R-013_SOC2_IMPLEMENTATION_PLAN.md  SOC2_CSF_MAPPING_TEMPLATE.md  SOC2_FRAMEWORK_STRUCTURE.md  SOC2_IMPLEMENTATION_GUIDE.md  SOC2_INDEX.md
scripts/: fetch_nist_data.py
tests/: __init__.py  conftest.py  test_assessment.py  test_cli.py  test_documentation.py  test_evaluation.py  test_framework_mgmt.py  test_frameworks_manager.py  test_frameworks_mapper.py  test_lookup.py  test_rag_search.py  test_search.py  test_tool_contracts.py
(+44 files in other folders)
